# rd

./: Cargo.toml  flake.nix  rust-toolchain.toml
src/: main.rs
